fix(notification): add z-index to guarantee notifications stay on top

--- a/packages/default/scss/notification/_layout.scss
+++ b/packages/default/scss/notification/_layout.scss
@@ -6,6 +6,7 @@
         display: inline-flex;
         flex-flow: column-reverse wrap;
         position: fixed;
+        z-index: 1000;
     }
 
     .k-notification-container {
